--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ android:
   components:
   - build-tools-23.0.1
   - android-23
+  - extra-android-support
 
 script:
   - "./gradlew :app:assembleDebug"
