--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ android:
   - build-tools-23.0.1
   - android-23
   - extra-android-support
+  - extra-android-m2repository
 
 script:
   - "./gradlew :app:assembleDebug"
